--- a/index.html
+++ b/index.html
@@ -5,28 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>2048</title>
 		<link rel="stylesheet" href="./style.css" />
+		<script src="./index.js" type="module"></script>
 	</head>
 	<body>
-		<div id="game-board">
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
-
-			<div class="square">2</div>
-		</div>
-		<script src="./index.js" type="module"></script>
+		<div id="game-board"></div>
 	</body>
 </html>
